Add mobile layout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body>
+  <body class="flex v-center">
     <div id="main"></div>
     <script src="index.js"></script>
   </body>
